# routes/cars.js
@@ -6,7 +6,7 @@ const carsController = require('../controllers/cars_restaurants');
 router.get('/', carsController.getAllcars);
 router.get('/:id', carsController.getSinglecars);
 router.post('/', carsController.createcars);
-// router.put('/:id', carsController.updatecars);
-// router.delete('/:id', carsController.deletecars);
+router.put('/:id', carsController.updatecars);
+router.delete('/:id', carsController.deletecars);
 
 module.exports = router;
