# routes/restaurants.js
@@ -3,10 +3,10 @@ const router = express.Router();
 
 const restaurantsController = require('../controllers/cars_restaurants');
 
-router.get('/', restaurantsController.getAllRestaurant);
-router.get('/:id', restaurantsController.getSingleRestaurant);
+router.get('/', restaurantsController.getAllrestaurants);
+router.get('/:id', restaurantsController.getSinglerestaurant);
 router.post('/', restaurantsController.createRestaurant);
-// router.put('/:id', restaurantsController.updateRestaurant);
-// router.delete('/:id', restaurantsController.deleteRestaurant);
+router.put('/:id', restaurantsController.updateRestaurant);
+router.delete('/:id', restaurantsController.deleteRestaurant);
 
 module.exports = router;
